--- a/front-end/sass/_project.scss
+++ b/front-end/sass/_project.scss
@@ -283,7 +283,7 @@ select.ng-pristine {
 	right: -100%;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 500px) {
 
 	html {
 		font-size: $smallFontSize;
